@@ -1,3 +1,7 @@
+2007-07-15 Jens Tkotz <jens@peino.de> 1.5.7-svn-b12
+
+ * Change: Updated PEARs Mail/mimePart.php
+
 2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b11
 
  * Fix: More use of gTranslate()
